--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App{
-   height: 100%;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 .app_wrapper {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: 0 auto;
     display: grid;
     grid-template-rows: 60px 1fr;
