--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -15,3 +15,13 @@
 .contacts{
     padding-left: 10px;
 }
+.coverImg{
+    width: 100%;
+    height: 100%;
+}
+.coverImg img{
+    width: 500px;
+    height: 100%;
+    padding: 5px;
+    margin: 5px;
+}
