--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
     height: 100vh;
 }
 .app_wrapper {
-    width: 100vw;
+    /*width: 100vw;*/
     height: 100vh;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     display: grid;
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
